# vroom-sbi

./: .gitignore  COMPLETION_SUMMARY.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  README.md  compare_methods.py  config.yaml  config_spectra.yaml  config_test.yaml  demo_weighted_system.py  freq.txt  infer.py  noise_per_chan.fits  pyproject.toml  requirements.txt  run_rmtools.py  setup.py  test_imports.py  test_physical_models.py  test_recovery.py  train_all.py  validate.py  validate_all.py  validate_decision_layer.py  validate_implementation.py  validate_model.py  validate_weighted.py  weights.fits
.github/workflows/: cube_integration.yml
src/: __init__.py  augmentation.py  classifier.py  decision.py  inference.py  physics.py  plots.py  simulator.py  train.py
src/cli/: __init__.py  commands.py  main.py
src/config/: __init__.py  configuration.py  hardware.py  validators.py
src/core/: __init__.py  base_classes.py  checkpoint.py  result.py
src/inference/: __init__.py  engine.py
src/io/: __init__.py  cube_io.py
src/simulator/: __init__.py  augmentation.py  base_simulator.py  physics.py  prior.py  spectral_simulator.py
src/training/: __init__.py  classifier_trainer.py  data_loader.py  networks.py  spectral_trainer.py  streaming_trainer.py  trainer.py
src/utils/: __init__.py  huggingface.py  plots.py  validation.py
src/validation/: __init__.py  validator.py
tests/: conftest.py  test_cube_inference.py  test_cube_io.py  test_physical_models.py
validation_results/: metrics_summary.txt  validation_summary.txt
